@@ -2,10 +2,12 @@
  - feat: implement download manager
  - feat: rename first tab to "Find Data" and allow searching for
    private datasets
+ - fix: perform sanity checks for datasets (#27)
  - enh: allow to download all resources of a collection (#13)
  - enh: implement search for packages the user has access to
  - enh: implement DBInterrogator functions for generating a private
    user db (partly #5)
+ - setup: bump dclab from 0.35.3 to 0.35.5
  - ref: simplify `dbmodel` submodule (just use Interrogator)
  - ref: expand dedicated `api` submodule (moved dunctions from
    `upload.dataset`)
